@@ -249,6 +249,7 @@ There are also many improvements to the documentation both under the hood and in
  * Ensure that the live preview panel correctly clears the cache when a new page is created (Sage Abdullah)
  * Ensure that there is a larger hoverable area for add block (+) within the Drafttail editor (Steven Steinwand)
  * Resolve multiple header styling issues for modal, alignment on small devices, outside click handling target on medium devices, close button target size and hover styles (Paarth Agarwal)
+ * Fix issue where comments could not be added in StreamField that were already already saved (Jacob Topp-Mugglestone)
 
 
 ## Upgrade considerations
